recursion.logo.koch.Koch.scala.error
Erreur de compilation :
Koch:2: error: not found: value snowSide
    snowSide(levels, length);
    ^Koch:5: error: not found: value snowSide
    snowSide(levels, length);
    ^Koch:8: error: not found: value snowSide
    snowSide(levels, length);
    ^